[gd_scene load_steps=7 format=3 uid="uid://dq6iads52vnrk"]

[ext_resource type="Script" path="res://maps/official/planet/planet.gd" id="1_v4yft"]
[ext_resource type="Script" path="res://maps/official/planet/Spawn.gd" id="2_7m08t"]

[sub_resource type="SphereMesh" id="SphereMesh_5wxu5"]
radius = 10.0
height = 20.0
radial_segments = 34
rings = 10

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ndpme"]
vertex_color_use_as_albedo = true
emission_enabled = true
emission = Color(0.282353, 0.321569, 0.372549, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_qj2r2"]
radius = 27.0862

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_yhcsp"]
properties/0/path = NodePath(".:population")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:faction")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath(".:colonise")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false
properties/3/path = NodePath(".:colonisable")
properties/3/spawn = true
properties/3/sync = true
properties/3/watch = false

[node name="Planet" type="CSGMesh3D"]
mesh = SubResource("SphereMesh_5wxu5")
material = SubResource("StandardMaterial3D_ndpme")
script = ExtResource("1_v4yft")

[node name="Area3D" type="Area3D" parent="."]
unique_name_in_owner = true
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector3(1, 1, 0)
gravity_direction = Vector3(1, 1, 0)
gravity = -32.0
linear_damp_space_override = 1
angular_damp_space_override = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_qj2r2")

[node name="orbitpoint" type="Node3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.137539, 17.8925, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[node name="Spawn" type="Node3D" parent="." groups=["Spawners"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)
script = ExtResource("2_7m08t")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_yhcsp")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://base.tscn")
spawn_path = NodePath("..")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
